<?xml version="1.0"?>
<package format="2">
  <name>vnh5019_motor_controller</name>
  <version>0.0.0</version>
  <description>The vnh5019_motor_controller package</description>

  <maintainer email="jmbillson@outlook.com">Joshua Billson</maintainer>

  <license>MIT</license>

  <author email="jmbillson@outlook.com">Joshua Billson</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>key_teleop</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>key_teleop</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>key_teleop</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
